# toffi_final

AutoMoDe-toffi/irace-files/irace-change_colors/: target-runner
AutoMoDe-toffi/src/: AutoMoDeMain.cpp  SimLibrary.cmake
AutoMoDe-toffi_cluster/: README.asciidoc
AutoMoDe-toffi_cluster/src/: RealLibrary.cmake  SimLibrary.cmake
all/AutoMoDe-toffi/: CMakeLists.txt
all/demiurge-smartobject-dao/: CMakeLists.txt  README.md
all/demiurge-smartobject-dao/src/: CMakeLists.txt  SOReferenceModel1Dot1.cpp  SOReferenceModel1Dot1.h  SmartObjectDAO.cpp  SmartObjectDAO.h
all/experiments-loop-functions/: CMakeLists.txt
experiments-loop-functions/src/: CoreLoopFunctions.cpp  CoreLoopFunctions.h
src/: AutoMoDeMain.cpp  SimLibrary.cmake
src/core/: AutoMoDeFiniteStateMachine.h  AutoMoDeFsmBuilder.cpp  AutoMoDeFsmBuilder.h
src/epuck_modules/: AutoMoDeBehaviourEpuck.h  AutoMoDeBehaviourEpuckAntiPhototaxis.h  AutoMoDeBehaviourEpuckPhototaxis.h  AutoMoDeBehaviourEpuckPushExceptColor.cpp  AutoMoDeBehaviourEpuckPushExceptColor.h  AutoMoDeConditionEpuckBlackFloor.cpp  AutoMoDeConditionEpuckNeighborsCount.cpp  AutoMoDeConditionEpuckProbColor.cpp  AutoMoDeConditionEpuckProbColor.h
src/modules_general/: AutoMoDeCondition.h
src/smartobject_modules/: AutoMoDeConditionCombinationSmartObject.cpp  AutoMoDeConditionSmartObjectMoving.cpp  AutoMoDeConditionSmartObjectMoving.h  AutoMoDeConditionSmartObjectMovingBlackFloor.h  AutoMoDeConditionSmartObjectNotMoving.cpp  AutoMoDeConditionSmartObjectNotMoving.h  AutoMoDeConditionSmartObjectTimer.cpp  AutoMoDeConditionSmartObjectTimer.h
(+148 files in other folders)
